apps/monitoring/grafana/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard-https
  namespace: monitoring
  labels:
    app: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.powell.place`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
